<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".activity.DetailActivity">

	<TextView
		android:id="@+id/DetailsPrice"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="30dp"
		android:text="@string/price"
		android:textSize="20sp"
		app:layout_constraintEnd_toEndOf="@+id/DetailsTitle"
		app:layout_constraintStart_toStartOf="@+id/DetailsTitle"
		app:layout_constraintTop_toBottomOf="@+id/DetailsTitle" />

	<TextView
		android:id="@+id/DetailsTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/title"
		android:textSize="40sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.498"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/DetailViewPager" />

	<androidx.viewpager2.widget.ViewPager2
		android:id="@+id/DetailViewPager"
		android:layout_width="409dp"
		android:layout_height="190dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0" />

	<TextView
		android:id="@+id/DetailsDesc"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:text="@string/ingredients"
		android:textSize="15sp"
		android:autoSizeMaxTextSize="10dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="@+id/DetailViewPager"
		app:layout_constraintStart_toStartOf="@+id/DetailViewPager"
		app:layout_constraintTop_toBottomOf="@+id/DetailsPrice"
		app:layout_constraintVertical_bias="0.093" />

	<Button
		android:id="@+id/DetailsPlus"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/plus"
		android:layout_marginEnd="50dp"
		app:cornerRadius="150sp"
		app:layout_constraintBottom_toBottomOf="@+id/DetailsMinus"
		app:layout_constraintEnd_toEndOf="@+id/DetailViewPager"
		app:layout_constraintTop_toTopOf="@+id/DetailsMinus" />

	<Button
		android:id="@+id/DetailsMinus"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/minus"
		android:layout_marginStart="50dp"
		app:cornerRadius="150sp"
		app:layout_constraintBottom_toTopOf="@+id/DetailsCart"
		app:layout_constraintStart_toStartOf="@+id/DetailViewPager"
		app:layout_constraintTop_toBottomOf="@+id/DetailsDesc" />

	<TextView
		android:id="@+id/DetailsNumber"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/nombre"
		app:layout_constraintBottom_toBottomOf="@+id/DetailsMinus"
		app:layout_constraintEnd_toStartOf="@+id/DetailsPlus"
		app:layout_constraintStart_toEndOf="@+id/DetailsMinus"
		app:layout_constraintTop_toTopOf="@+id/DetailsMinus" />

	<Button
		android:id="@+id/DetailsCart"
		android:layout_width="221dp"
		android:layout_height="48dp"
		android:text="@string/prix_total"
		app:cornerRadius="150sp"
		android:layout_marginBottom="40dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="@+id/DetailsPlus"
		app:layout_constraintStart_toStartOf="@+id/DetailsMinus" />

</androidx.constraintlayout.widget.ConstraintLayout>